tests/snapshots/render/ansi@commonmark-spec-107-indented_code_blocks.snap
---
source: tests/render.rs
assertion_line: 115
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/107-indented_code_blocks.md
---
[32m╭──────────────────────────────────────────────────────────────────────────────╮[0m
[32m│ [0ma simple                                                                    [32m │[0m
[32m│ [0m  indented code block                                                       [32m │[0m
[32m╰──────────────────────────────────────────────────────────────────────────────╯[0m
